# jetliner

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  mkdocs.yml  pyproject.toml  test_organization_analysis.md  ty.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.kiro/appendix/: B1_e2e_test_review.md  B2_non_record_schema_sanity_check.md  B3_non_record_schema_design_decision.md  C_functional_coverage_gap_analysis.md
.kiro/devnotes/: pyo3-extension-module-testing.md  task-12.3-resilient-reading-pbt.md  task-12.5-sync-marker-recovery.md  task-15.1-avro-reader-core.md  task-15.3a-python-error-exposure.md  task-17.2.1-snappy-crc32.md  task-5-stream-source.md  task-8.1-primitive-decoder.md  task-8.3-logical-type-decoder.md  task-8.5-named-type-resolution-pbt.md  task-9.1-avro-arrow-type-mapping.md
.kiro/specs/avro-1-12-support/: design.md  requirements.md  tasks.md
.kiro/specs/avro-1-12-support/devnotes/: enum-schema-evolution-default.md  task-6.1-duration-months-fix.md  unknown-logical-type-preservation.md
.kiro/specs/avro-stream-reader/: design.md  requirements.md  tasks.md
.kiro/specs/documentation/: design.md  requirements.md  tasks.md
.kiro/specs/jetliner/: design.md  requirements.md  tasks.md
.kiro/specs/jetliner/appendix/: A_avro_java_test_research.md  B1_e2e_test_review.md  B2_non_record_schema_sanity_check.md  B_e2e-test-plan.md  D1_varlen-builder-optimization.md  D_optimization-analysis.md  E_reader-schema-support.md  F_predicate-pushdown-feasibility.md  G_pipeline-parallelism-feasibility.md
.kiro/specs/jetliner/devnotes/: 18.2-comparative-benchmarks.md  18.3-optimization-1-results.md  18.4-optimization-2-results.md  18.4.2-stringbuilder-optimization.md  20-parse-avro-schema-enum-fix.md  21.1-nullable-complex-types-investigation.md  21.5-nullable-enum-fix.md  22.1-enum-builder.md  23-fixed-type-binary-mapping.md  25.9-s3-read-reduction-benchmark.md  README.md  map-struct-list-builder-fix.md  perf-listarray-direct-construction.md  task-10-spec-compliance-review.md  task-11.1-prefetch-buffer.md  task-11.3-batch-size-semantics.md  task-12.2-skip-mode-limitations.md  task-17.2.3-recursive-types.md  (+2 more)
.kiro/specs/polars-api-alignment/: design.md  requirements.md  tasks.md
.kiro/specs/remove-open-function/: design.md  requirements.md  tasks.md
.kiro/specs/s3-mock-testing/: design.md  requirements.md  tasks.md
.kiro/steering/: logging.md  project.md
benches/: read_throughput.rs
benches/python/: compare.py  generate_data.py  plot.py
benches/python/output/: benchmark_performance.html  benchmark_speedup.html
docs/: contributing.md  index.md  installation.md
docs/api/: avro_reader.md  exceptions.md  index.md  multi_avro_reader.md  read_avro.md  read_avro_schema.md  reference.md  scan_avro.md
docs/assets/: benchmark_performance.html  benchmark_speedup.html
docs/overrides/: main.html
docs/performance/: benchmarks.md  index.md  optimization.md
docs/user-guide/: codecs.md  data-sources.md  error-handling.md  index.md  local-files.md  query-optimization.md  s3-access.md  schemas.md  streaming.md
python/jetliner/: __init__.py  exceptions.py  jetliner.pyi  py.typed
python/tests/: __init__.py  conftest.py  test_e2e_real_files.py.verify  test_python_api.py
python/tests/codecs/: test_codec_interop.py
python/tests/integration/: test_api_errors.py  test_collect_batches.py  test_continuous_error_exposure.py  test_data_types.py  test_early_stopping.py  test_edge_cases.py  test_error_handling.py  test_exception_attributes.py  test_exception_hierarchy.py  test_lazyframe.py  test_multi_block.py  test_multi_source.py  test_predicate.py  test_projection.py  test_query_operations.py  test_robustness.py  test_scan_lazyframe.py  test_schema_inspection.py  test_sink_batches.py  test_skip_mode_recovery.py  test_strict_mode_failure.py
python/tests/interop/: test_apache_avro.py  test_fastavro.py  test_parametrized.py
python/tests/performance/: test_large_file_stress.py  test_memory_efficiency.py  test_performance.py  test_streaming.py
python/tests/s3/: __init__.py  conftest.py  test_fixtures_verify.py  test_s3_edge_cases.py  test_s3_errors.py  test_s3_glob.py  test_s3_queries.py  test_s3_read.py  test_storage_options.py
python/tests/types/: test_edge_case_values.py  test_enum_fixed.py  test_logical_types.py  test_nested_complex_types.py  test_non_record_schemas.py  test_nullable_types.py  test_recursive_types.py
python/tests/unit/: test_configuration.py  test_context_manager.py  test_error_accumulation.py  test_error_handling_api.py  test_iterator.py  test_multi_avro_reader.py  test_multi_reader_cleanup.py  test_path_support.py  test_polars_schema_property.py  test_read_chunk_size.py  test_reader_core.py  test_reader_properties.py  test_schema_access.py  test_unknown_kwargs.py
scripts/: generate_corrupted_avro.py  generate_edge_case_avro.py  generate_large_avro.py
src/: error.rs  lib.rs  schema.rs
src/api/: args.rs  columns.rs  file_path.rs  glob.rs  mod.rs  multi_source.rs  options.rs  read.rs  row_index.rs  scan.rs  schema.rs  sources.rs
src/codec/: mod.rs
src/convert/: arrow.rs  dataframe.rs  mod.rs
src/python/: api.rs  errors.rs  mod.rs  reader.rs  types.rs
src/reader/: block.rs  buffer.rs  decode.rs  header.rs  mod.rs  record_decoder.rs  stream.rs  varint.rs
src/schema/: compatibility.rs  mod.rs  parser.rs  reader_writer_resolution.rs  resolution.rs  types.rs
src/source/: local.rs  mock_s3_starter.rs  mod.rs  s3.rs  traits.rs
tests/: api_tests.rs  property_tests.proptest-regressions  property_tests.rs  schema_tests.rs  smoke_test.py  spec_compliance_tests.rs
tests/data/apache-avro/: LICENSE  NOTICE
tests/data/corrupted/: corrupted-compressed.avro  corrupted-sync-marker.avro  invalid-magic.avro  invalid-record-data.avro  multi-block-one-corrupted.avro  truncated.avro
tests/data/edge-cases/: edge-cases.avro
tests/data/fastavro/: LICENSE  array-toplevel.avro  graph-recursive.avro  int-toplevel.avro  map-toplevel.avro  string-toplevel.avro  tree-recursive.avro
tests/data/large/: weather-large.avro
(+2 files in other folders)
