[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "jetliner"
version = "0.1.0"
description = "High-performance Avro streaming reader for Polars DataFrames"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = ["polars>=0.52"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0", "maturin>=1.4"]

[dependency-groups]
dev = [
  "crc32c>=2.8",
  "fastavro>=1.12.1",
  "hypothesis>=6.150.0",
  "maturin>=1.11.2",
  "moto[s3]>=5.0",
  "psutil>=7.2.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "python-snappy>=0.7.3",
  "ruff>=0.8.0",
  "testcontainers[minio]>=4.0",
]

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "jetliner"

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "container: marks tests that require Docker containers (deselect with '-m \"not container\"')",
]

[tool.poe.executor]
type = "uv"
no-sync = true # Don't rebuild & resync the project for every task run!

[tool.poe.env]
PYO3_PYTHON = "${POE_ROOT}/.venv/bin/python"

[tool.poe.tasks.build-dev]
help = "Build python bindings for development"
cmd = "maturin develop"

[tool.poe.tasks.build-bench]
help = "Build optimized python bindings for development"
cmd = "maturin develop --release"

[tool.poe.tasks.build-release]
help = "Build production python wheel"
cmd = "maturin build --release"

[tool.poe.tasks.test-rust]
help = "Run all Rust tests with all codec features"
cmd = "cargo test --features test-features"

[tool.poe.tasks.test-property]
help = "Run rust property-based tests"
cmd = "cargo test --test property_tests --features test-features"

[tool.poe.tasks.test-schema]
help = "Run schema tests"
cmd = "cargo test --test schema_tests --features test-features"

[tool.poe.tasks.test-python]
help = "Run Python unit tests"
cmd = "pytest python/tests -v -m 'not slow'"

[tool.poe.tasks.test-python-slow]
help = "Run slow Python tests (large file stress tests)"
cmd = "pytest python/tests -v -m slow"

[tool.poe.tasks.test-all]
help = "Run all tests"
sequence = ["test-rust", "test-property", "test-schema", "test-python"]

[tool.poe.tasks.bench]
help = "Run benchmarks"
cmd = "cargo bench"

[tool.poe.tasks.bench-read]
help = "Run read throughput benchmark"
cmd = "cargo bench --bench read_throughput"

[tool.poe.tasks.format-rust]
help = "Format Rust code"
cmd = "cargo fmt"

[tool.poe.tasks.format-python]
help = "Format Python code with ruff"
cmd = "ruff check --fix python/"

[tool.poe.tasks.style-rust]
help = "Check Rust code formatting without changes"
cmd = "cargo fmt --check"

[tool.poe.tasks.lint-rust]
help = "Run Clippy linter with all codec features"
cmd = "cargo clippy --features test-features -- -D warnings"
env = { PYO3_PYTHON = "${POE_ROOT}/.venv/bin/python" }

[tool.poe.tasks.lint-python]
help = "Check Python code formatting without changes"
cmd = "ruff check python/"

[tool.poe.tasks.check-rust]
sequence = [
  "style-rust",
  "lint-rust",
  "test-rust",
  "test-property",
  "test-schema",
]

[tool.poe.tasks.check-python]
sequence = ["lint-python", "test-python"]

[tool.poe.tasks.format]
sequence = ["format-rust", "format-python"]

[tool.poe.tasks.check]
sequence = ["check-rust", "check-python"]

[tool.poe.tasks.clean]
help = "Remove build artifacts"
sequence = [
  { cmd = "cargo clean" },
  { script = "poethepoet.scripts:rm('.ruff_cache','.mypy_cache','.pytest_cache','./**/__pycache__','dist',verbosity=environ.get('POE_VERBOSITY'))" },
]

[tool.poe.tasks.rustup]
help = "Install rust toolchain to get started"
shell = """
command -v rustup >/dev/null || curl https://sh.rustup.rs -sSf | sh -s -- -y
rustup component add rustfmt
rustup component add clippy
"""

[tool.poe.tasks.avro-schema]
help = "Print the schema of the given avro file"
expr = """json.dumps(fastavro.reader(open(avro_path, 'rb')).writer_schema, indent=2)"""
args.avro_path = { positional = true }
imports = ["json", "fastavro"]

[tool.poe.tasks.avro-head]
help = "Print the first n entries in the given avro file"
expr = """pprint.pprint(list(itertools.islice(fastavro.reader(open(avro_path, 'rb')), take_n)))"""
args.avro_path = { positional = true }
args.take_n = { options = ["-n"], type = "integer" }
imports = ["json", "fastavro", "itertools", "pprint"]
